[gd_scene load_steps=12 format=2]

[ext_resource path="res://nodes/battle_manager.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixelated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://nodes/cursor.png" type="Texture" id=3]
[ext_resource path="res://nodes/actor_info_control.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite

onready var manager = get_parent()
var active = true

signal has_moved
signal has_clicked

func _ready():
	set_process_input(true)
	pass

func _input(ev):
	if active:
		var terrain = manager.get_scene().get_terrain_collider()
		var pos = terrain.world_to_map(self.position)
		var cellSize = terrain.get_cell_size()
		
		if ev.is_action_pressed(\"ui_right\"):
			if terrain.get_cellv(pos + Vector2(1, 0)) < 0:
				translate(Vector2(cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
		
		elif ev.is_action_pressed(\"ui_left\"):
			if terrain.get_cellv(pos - Vector2(1, 0)) < 0:
				translate(-Vector2(cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
	
		elif ev.is_action_pressed(\"ui_down\"):
			if terrain.get_cellv(pos + Vector2(0, 1)) < 0:
				translate(Vector2(-cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
	
		elif ev.is_action_pressed(\"ui_up\"):
			if terrain.get_cellv(pos - Vector2(0, 1)) < 0:
				translate(-Vector2(-cellSize.x * 0.5, cellSize.y * 0.5))
				emit_signal(\"has_moved\", self)
				get_tree().set_input_as_handled()
		
		elif ev.is_action_pressed(\"ui_accept\"):
			emit_signal(\"has_clicked\", self)
			get_tree().set_input_as_handled()

func activate(enable):
	print(\"Cursor state changed to \", enable, \".\")
	active = enable
"

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D
var fadingOut = false
var stopped = false
var timer = 45
onready var target = get_node(\"../target2\")

signal intro_has_ended

func _process(_dt):
	var motion = target.position - self.position
	translate(motion / 10)
	
	if motion.length_squared() < 0.1:
		stopped = true
	
	if fadingOut:
		var l = $label
		var c = l.get(\"custom_colors/font_color\")
		c.a -= 0.2

		if c.a <= 0.0:
			queue_free()
			emit_signal(\"intro_has_ended\")
		else:
			l.set(\"custom_colors/font_color\", c)

	if stopped:
		timer -= 1
		
		if timer <= 0:
			target = get_node(\"../target2b\")
			fadingOut = true
			stopped = false
"

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=4]
script/source = "extends Node2D
var fadingOut = false
var stopped = false
var timer = 45
onready var target = get_node(\"../target1\")

signal intro_has_ended

func _process(_dt):
	var motion = target.position - self.position
	translate(motion / 10)
	
	if motion.length_squared() < 0.1:
		stopped = true
	
	if fadingOut:
		var l = $label
		var c = l.get(\"custom_colors/font_color\")
		c.a -= 0.2

		if c.a <= 0.0:
			queue_free()
			emit_signal(\"intro_has_ended\")
		else:
			l.set(\"custom_colors/font_color\", c)

	if stopped:
		timer -= 1
		
		if timer <= 0:
			target = get_node(\"../target1b\")
			fadingOut = true
			stopped = false
"

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 2 )

[node name="battle" type="Node"]
script = ExtResource( 1 )

[node name="cursor" type="Sprite" parent="."]
visible = false
position = Vector2( 24, 56 )
z_index = -1
texture = ExtResource( 3 )
script = SubResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="BEBE" parent="ui" instance=ExtResource( 4 )]

[node name="BBEE" type="Control" parent="ui"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 240.0
margin_bottom = 135.0
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="target2" type="Position2D" parent="ui/BBEE"]
position = Vector2( 29.167, 15.403 )
z_as_relative = false

[node name="target2b" type="Position2D" parent="ui/BBEE"]
position = Vector2( 13.811, -5.417 )
z_as_relative = false

[node name="target1" type="Position2D" parent="ui/BBEE"]
position = Vector2( 33.157, 18.239 )
z_as_relative = false

[node name="target1b" type="Position2D" parent="ui/BBEE"]
position = Vector2( 46.331, 39.713 )
z_as_relative = false

[node name="title" type="Node2D" parent="ui/BBEE"]
position = Vector2( 43.427, 35.754 )
script = SubResource( 2 )

[node name="label" type="Label" parent="ui/BBEE/title"]
margin_top = -6.0
margin_right = 110.0
margin_bottom = 6.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.97, 0.62, 0.21, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "LET THE BATTLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subtitle" type="Node2D" parent="ui/BBEE"]
position = Vector2( 18.117, -0.887 )
script = SubResource( 4 )

[node name="label" type="Label" parent="ui/BBEE/subtitle"]
margin_right = 110.0
margin_bottom = 6.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.97, 0.62, 0.21, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "COMMENCE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BBBB" type="Control" parent="ui"]
margin_right = 240.0
margin_bottom = 135.0
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_panel" type="Panel" parent="ui/BBBB"]
margin_left = 2.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="turn" type="Label" parent="ui/BBBB/turn_panel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 31.0
margin_bottom = 10.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player"

[node name="turn_post" type="Label" parent="ui/BBBB/turn_panel/turn"]
anchor_left = 0.67
anchor_right = 1.0
margin_left = 4.0
margin_top = 0.188297
margin_right = 5.0
margin_bottom = 9.1883
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EEEE" type="Control" parent="ui"]
visible = false
margin_right = 240.0
margin_bottom = 135.0
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_control" type="Control" parent="ui"]
margin_right = 240.0
margin_bottom = 135.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_turn" type="Button" parent="ui/turn_control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -22.0
margin_right = -2.0
margin_bottom = -3.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 7 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="has_found_an_actor" from="." to="ui/BEBE" method="_on_battle_has_found_an_actor"]
[connection signal="has_clicked" from="cursor" to="." method="_on_cursor_has_clicked"]
[connection signal="has_moved" from="cursor" to="." method="_on_cursor_has_moved"]
[connection signal="intro_has_ended" from="ui/BBEE/title" to="." method="_on_title_intro_has_ended"]
[connection signal="pressed" from="ui/turn_control/next_turn" to="." method="_on_next_turn_pressed"]
